# srmauv-jetson_nano-

./: README.md  heading_test.txt
Arduino/depth/: depth.ino
Arduino/libraries/SimpleKalmanFilter/examples/AltitudeKalmanFilterExample/: AltitudeKalmanFilterExample.ino
Arduino/libraries/SimpleKalmanFilter/examples/BasicKalmanFilterExample/: BasicKalmanFilterExample.ino
Arduino/libraries/SimpleKalmanFilter/src/: SimpleKalmanFilter.cpp
src/SpartonCompassIMU/src/: SpartonCompassIMU.py
src/actions/: CMakeLists.txt
src/actions/clients/: depthClient.py  headingClient.py
src/actions/servers/: depthServer.py  headingServer.py  surgeServer.py  swayServer.py
src/jetson/: CMakeLists.txt
src/jetson/include/: JHPWMPCA9685.h  controller.h
src/jetson/src/: JHPWMPCA9685.cpp  controller.cpp
src/launch/: CMakeLists.txt
src/launch/vid_test/: test_video_resource.py
src/mission_planner/: CMakeLists.txt
src/mission_planner/src/: Depth.py  DetectBuoy.py  Forward.py  Heading.py  ImageTask.py  Move.py  PathAlign.py  Sink.py  Sway.py  Torpedo.py  mission_planner.py  test1.py  test2.py  test3.py  test4.py
src/tests/thrusters/: thruster_test.launch
src/thrusters/nodes/: buoyDetect.py  buoyTrack.py  depthThruster.py  teleop.py  teleop_old.py  vectorThruster.py
src/vision/src/: buoyDetect.py  pathDetect.py
